--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 # 应用配置
+# 该应用命名为extensible
 spring.application.name=extensible
+# 该应用的接口为8090
 server.port=8090
 #JDBC配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/extensible
 spring.datasource.username=root
 spring.datasource.password=root
-#JPA配置
-spring.jpa.database=MySQL
-spring.jpa.show-sql=true
+#Mybatis配置
+# map.xml中查询返回结果：驼峰匹配
+mybatis.configuration.map-underscore-to-camel-case=true
+# 实体类位置
+mybatis.type-aliases-package=com.netopstec.extensible.entity
+# xml映射文件位置
+mybatis.mapper-locations=classpath:mappings/*.xml
