--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.netopstec.extensible.entity
 # xml映射文件位置
 mybatis.mapper-locations=classpath:mappings/*.xml
+#日志配置
+#打印SQL的预编译语句---路径是mapper接口层，而不是mapper.xml的位置
+logging.level.com.netopstec.extensible.mapper=debug
