--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=extensible
 server.port=8090
 #JDBC≈‰÷√
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/extensible
+spring.datasource.url=jdbc:mysql://192.168.139.141:3306/extensible
 spring.datasource.username=root
 spring.datasource.password=root
 #Mybatis≈‰÷√
