以(logback + slf4j)的方式实现日志系统---并根据开发/测试/生产环 境的不同，和DEBUG/INFO/ERROR日志级别的不同对该项目的日志进行管理。。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,17 @@
 spring.application.name=extensible
 # 该应用的接口为8090
 server.port=8090
-#JDBC配置
+# JDBC配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.139.141:3306/extensible
-spring.datasource.username=root
-spring.datasource.password=root
-#Mybatis配置
+# Mybatis配置
 # map.xml中查询返回结果：驼峰匹配
 mybatis.configuration.map-underscore-to-camel-case=true
 # 实体类位置
 mybatis.type-aliases-package=com.netopstec.extensible.entity
 # xml映射文件位置
 mybatis.mapper-locations=classpath:mappings/*.xml
-#日志配置
-#打印SQL的预编译语句---路径是mapper接口层，而不是mapper.xml的位置
+# 日志配置
+# 打印SQL的预编译语句---路径是mapper接口层，而不是mapper.xml的位置
 logging.level.com.netopstec.extensible.mapper=debug
+# 选择目前启用的环境配置（dev/test/prod）
+spring.profiles.active=test
