配置不同环境（开发/测试/生产）采用不同的配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ mybatis.mapper-locations=classpath:mappings/*.xml
 # 打印SQL的预编译语句---路径是mapper接口层，而不是mapper.xml的位置
 logging.level.com.netopstec.extensible.mapper=debug
 # 选择目前启用的环境配置（dev/test/prod）
-spring.profiles.active=test
+spring.profiles.active=prod
