添加redis相关的工具类、测试以及文档^C git commit -m 添加redis相关的工具类、测试以

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:mysql://192.168.139.141:3306/extensible
 spring.datasource.username=root
 spring.datasource.password=root
+# ≈‰÷√Redis
+spring.redis.host=192.168.139.141
+spring.redis.database=1
