--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:mysql://192.168.139.141:3306/extensible
 spring.datasource.username=root
 spring.datasource.password=root
+# ≈‰÷√Redis
+spring.redis.host=192.168.139.141
+spring.redis.database=1
