--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # 正式环境，连的是虚拟机上的数据库
-spring.datasource.url=jdbc:mysql://192.168.139.141:3306/extensible
+spring.datasource.url=jdbc:mysql://mysql-master:3306/extensible
 spring.datasource.username=root
 spring.datasource.password=root
 # 配置Redis
