--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,16 @@
 # 开发环境，连的是本地的数据库
-spring.datasource.url=jdbc:mysql://localhost:3306/extensible
-spring.datasource.username=root
-spring.datasource.password=root
+# 主数据库的配置
+master.datasource.driverClassName=com.mysql.jdbc.Driver
+master.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_master
+# ！！！当SpringBoot的版本为2.0以下时，url需要改成如下写法。
+# master.datasource.url=jdbc:mysql://localhost:3306/extensible_master
+master.datasource.username=root
+master.datasource.password=root
+# 副数据库的配置
+slave.datasource.driverClassName=com.mysql.jdbc.Driver
+slave.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_slave
+slave.datasource.username=root
+slave.datasource.password=root
 # 配置Redis
 spring.redis.host=192.168.139.141
 spring.redis.database=1
