--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@
 spring.application.name=extensible
 # 该应用的接口为8090
 server.port=8090
-# JDBC配置
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# Mybatis配置
-# map.xml中查询返回结果：驼峰匹配
+## JDBC配置
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+## Mybatis配置
+## map.xml中查询返回结果：驼峰匹配
 mybatis.configuration.map-underscore-to-camel-case=true
 # 实体类位置
 mybatis.type-aliases-package=com.netopstec.extensible.entity
-# xml映射文件位置
+## xml映射文件位置
 mybatis.mapper-locations=classpath:mappings/*.xml
 # 日志配置
 # 打印SQL的预编译语句---路径是mapper接口层，而不是mapper.xml的位置
