测试Spring自带的定时任务、SpringBoot整合Quartz的定时任务两者的实现。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,11 @@ mybatis.mapper-locations=classpath:mappings/*.xml
 # 日志配置
 # 打印SQL的预编译语句---路径是mapper接口层，而不是mapper.xml的位置
 logging.level.com.netopstec.extensible.mapper=debug
+# quartz定时任务相关的配置
+quartz.scheduler-name=QUARTZ_SCHEDULER
+quartz.thread-count=10
+quartz.thread-name-prefix=quartz_worker
+quartz.tasks=\
+    ReportTimeTask:*/10 * * * * ? *
 # 选择目前启用的环境配置（dev/test/prod）
 spring.profiles.active=dev
