调整：实体类（student/teacher/classroom）均添加字段operateTime，保证能够在master数据库与slave数据库的数据同步时准确执行。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ quartz.scheduler-name=QUARTZ_SCHEDULER
 quartz.thread-count=10
 quartz.thread-name-prefix=quartz_worker
 quartz.tasks=\
-    ReportTimeTask:*/10 * * * * ? *
+    ReportTimeTask:*/10 * * * * ? *\
+    SyncSlaveDataTask:0 */10 * * * ? *\
+    SyncRedisDataTask:0 30 1 * * ? *
 # 选择目前启用的环境配置（dev/test/prod）
 spring.profiles.active=dev
