NAT模式下，IP地址还是会变动，需要即时更新redis主机的地址，否则无法发布。

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,15 +1,15 @@
 # 主数据库的配置
 master.datasource.driverClassName=com.mysql.jdbc.Driver
-master.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_master
+master.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_master?useSSL=false
 # ！！！当SpringBoot的版本为2.0以下时，url需要改成如下写法。
 # master.datasource.url=jdbc:mysql://localhost:3306/extensible_master
 master.datasource.username=root
 master.datasource.password=root
 # 副数据库的配置
 slave.datasource.driverClassName=com.mysql.jdbc.Driver
-slave.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_slave
+slave.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_slave?useSSL=false
 slave.datasource.username=root
 slave.datasource.password=root
 # 配置Redis
-spring.redis.host=192.168.139.141
+spring.redis.host=192.168.139.142
 spring.redis.database=1
