--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,5 +11,8 @@ slave.datasource.jdbcUrl=jdbc:mysql://localhost:3306/extensible_slave?useSSL=fal
 slave.datasource.username=root
 slave.datasource.password=root
 # ≈‰÷√Redis
-spring.redis.host=192.168.139.143
+spring.redis.host=192.168.139.149
 spring.redis.database=1
+# ≈‰÷√elasticsearch
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=192.168.139.149:9300
