--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=extensible
 # 该应用的接口为8090
 server.port=8090
 ## JDBC配置
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## Mybatis配置
 ## map.xml中查询返回结果：驼峰匹配
 mybatis.configuration.map-underscore-to-camel-case=true
