--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,13 @@
 # 主数据库的配置
-master.datasource.driverClassName=com.mysql.jdbc.Driver
-master.datasource.jdbcUrl=jdbc:mysql://mysql-master:3306/extensible_master?useSSL=false
+master.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+master.datasource.jdbcUrl=jdbc:mysql://mysql-master:3306/extensible_master?useSSL=false&serverTimezone=UTC
 # ！！！当SpringBoot的版本为2.0以下时，url需要改成如下写法。
 # master.datasource.url=jdbc:mysql://localhost:3306/extensible_master
 master.datasource.username=root
 master.datasource.password=root
 # 副数据库的配置
-slave.datasource.driverClassName=com.mysql.jdbc.Driver
-slave.datasource.jdbcUrl=jdbc:mysql://mysql-master:3306/extensible_slave?useSSL=false
+slave.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+slave.datasource.jdbcUrl=jdbc:mysql://mysql-master:3306/extensible_slave?useSSL=false&serverTimezone=UTC
 slave.datasource.username=root
 slave.datasource.password=root
 # 配置Redis
